--- a/preprocessing/.swarp.conf
+++ b/preprocessing/.swarp.conf
@@ -34,19 +34,19 @@ CLIP_WRITELOG          N               # Write output file with coordinates of
 CLIP_LOGNAME           clipped.log     # Name of output file with coordinates
                                        # of clipped pixels
 BLANK_BADPIXELS        N               # Set to 0 pixels having a weight of 0
-
+ 
 #-------------------------------- Astrometry ----------------------------------
+ 
 CELESTIAL_TYPE         NATIVE          # NATIVE, PIXEL, EQUATORIAL,
                                        # GALACTIC,ECLIPTIC, or SUPERGALACTIC
 PROJECTION_TYPE        TAN             # Any WCS projection code or NONE
 PROJECTION_ERR         0.001           # Maximum projection error (in output
                                        # pixels), or 0 for no approximation
-CENTER_TYPE            ALL             # MANUAL, ALL or MOST
+CENTER_TYPE            MANUAL	       # MANUAL, ALL or MOST
 CENTER         00:00:00.0, +00:00:00.0 # Coordinates of the image center
-PIXELSCALE_TYPE        MANUAL             # MANUAL,FIT,MIN,MAX or MEDIAN
-PIXEL_SCALE            0.396               # Pixel scale
+PIXELSCALE_TYPE        MAX          # MANUAL,FIT,MIN,MAX or MEDIAN
+PIXEL_SCALE            0.396            # Pixel scale
 IMAGE_SIZE             64,64               # Image size (0 = AUTOMATIC)
-
  
 #-------------------------------- Resampling ----------------------------------
  
@@ -92,8 +92,8 @@ BACK_FILTTHRESH        0.0             # Threshold above which the background-
  
 VMEM_DIR               .               # Directory path for swap files
 VMEM_MAX               2047            # Maximum amount of virtual memory (MB)
-MEM_MAX                2048             # Maximum amount of usable RAM (MB)
-COMBINE_BUFSIZE        2048             # RAM dedicated to co-addition(MB)
+MEM_MAX                256             # Maximum amount of usable RAM (MB)
+COMBINE_BUFSIZE        256             # RAM dedicated to co-addition(MB)
  
 #------------------------------ Miscellaneous ---------------------------------
  
@@ -103,7 +103,7 @@ COPY_KEYWORDS          OBJECT          # List of FITS keywords to propagate
                                        # from the input to the output headers
 WRITE_FILEINFO         N               # Write information about each input
                                        # file in the output image header?
-WRITE_XML              Y               # Write XML file (Y/N)?
+WRITE_XML              N               # Write XML file (Y/N)?
 XML_NAME               swarp.xml       # Filename for XML output
 XSL_URL                file:///usr/local/share/swarp/swarp.xsl
                                        # Filename for XSL style-sheet
