WIP- Change UbuntuPython36 to Ubuntu in azp.yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ jobs:
   - job: TestsForRedshift
     strategy:
       matrix:
-        Python36Ubuntu:
+        Ubuntu:
           imageName: 'ubuntu-latest'
 
     pool:
